changed settings handling

--- a/GW2Tools/src/main/resources/bundle/MyBundle_de.properties
+++ b/GW2Tools/src/main/resources/bundle/MyBundle_de.properties
@@ -9,3 +9,6 @@ filter=Filter
 min_level=Mindest Level
 recipes=Rezepte
 items=Gegenstände
+
+show_buyable_recipes=Zeige kaufbare Rezepte
+show_whole_recipe=Zeige gesamtes Rezept
