--- a/GW2Tools/src/main/resources/bundle/MyBundle_en.properties
+++ b/GW2Tools/src/main/resources/bundle/MyBundle_en.properties
@@ -9,3 +9,6 @@ filter=Filter
 min_level=Min Level
 recipes=Recipes
 items=Items
+
+show_buyable_recipes=Show buyable recipes
+show_whole_recipe=Show whole recipe
