quality of life

--- a/GW2Tools/src/main/resources/bundle/MyBundle_de.properties
+++ b/GW2Tools/src/main/resources/bundle/MyBundle_de.properties
@@ -14,3 +14,4 @@ items=Gegenstände
 
 show_buyable_recipes=Zeige kaufbare Rezepte
 show_whole_recipe=Zeige gesamtes Rezept
+show_already_learned=Zeige bereits gelernte Rezepte
