--- a/GW2Tools/src/main/resources/bundle/MyBundle_en.properties
+++ b/GW2Tools/src/main/resources/bundle/MyBundle_en.properties
@@ -14,5 +14,5 @@ recipes=Recipes
 items=Items
 
 show_buyable_recipes=Show buyable recipes
+show_auto_learned=Show automatically learned recipes
 show_whole_recipe=Show whole recipe
-show_already_learned=Show already learned recipes
